--- a/eds212-day3-comp2.qmd
+++ b/eds212-day3-comp2.qmd
@@ -1,6 +1,10 @@
 ---
 title: "eds212-day3-comp2"
 ---
+###remember!
+###usethis::use_git() This saves it to local repo
+###usethis::use_github() This saves it to remote repo
+
 
 ## Vectors in R
 ```{r}
@@ -22,6 +26,22 @@ class(pika)
 bear <- c(20L,3L,5L,18L)
 class(bear)
 #R reads this as integer value
+```
+
+```{r}
+ringtail <- c(1,3,5,7)
+fox <- c(2,4,6,8)
+ringtail+fox
+#this is adding the two vectors to make a new vector
+ringtain_fox <- ringtail+fox
+#this is storing the new vector to a name (if this was by itself, the code would not show up. it would be stored)
+ringtail_minus_fox <- ringtail-fox
+#again, same thing applies to here with what happened for the addition scenario
+
+## Scalar multiplier
+100*ringtail
+# Dot product
+ringtail %*% fox
 ```
 
 
